Changes since version 3.0.1
---------------------------

- Fixed bug in identityToString() and proxyToString() that could
  cause incorrect string values to be returned for identities
  containing characters outside the ASCII range or for characters
  that must be escaped, such as '/'.

- Fixed bug in addRouter() and removeRouter() that could cause the
  run time to get confused about which routers were active installed.
  
- If a proxy is not configured with a -h parameter, Ice will now
  attempt to connect using all local interfaces. The loopback interface 
  (127.0.0.1) will only be tried if it is the only local interface present.

- .NET 2.0 is now the target for All.sln. To build a version of Ice
  for C# that is compatible with .NET 1.1, use All_11.sln instead.

- Added the "clr:property" directive for classes and structures.
  If used, the property causes Slice data members to be mapped
  to properties instead.

- createReverseProxy() did not use the default context established
  on the communicator and created a proxy with an empty context
  instead. This has been fixed.

Changes since version 3.0.0
---------------------------

- Fixed a bug in the treatment of default contexts: proxies were
  created with an empty context instead of the default context on the
  communicator in some cases.

- Fixed a bug in the code generator that caused Clone() on sequences
  and dictionaries to behave incorrectly.

- Fixed a bug in the code generator that could cause Equals()
  comparisons to fail for containers that contained null references.

- Added ProxyIdentityKey and ProxyIdentityFacetKey helper classes to
  allow proxies to be inserted into collections and use only the
  identity, or the identity and facet name as the key. (See section
  14.11.3 in the doc.)

- Fixed a bug in endpoint comparisons that would cause new connections
  to be created needlessly. This would occur when the representation
  of the host differed between the proxy and endpoint configuration,